section of changing status of article completed
